Quick fix for landing page content getting cut off

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,8 @@ a:hover {
 	background-size: cover;
 	height: 100%;
 	padding-top: 100px;
+	display: table;
+	width: 100%;
 }
 h1 {
 	font-family: "Open Sans Condensed", sans-serif;
